--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>August Träningsspårare</title>
+    <title>Fysbingo</title>
     <link rel="manifest" href="#" id="manifest-placeholder">
     <meta name="theme-color" content="#2d3a87">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -617,7 +617,7 @@
         // Create and register manifest dynamically
         function createManifest() {
             const manifest = {
-                "name": "August Träningsspårare",
+                "name": "Fysbingo",
                 "short_name": "Träning",
                 "start_url": "./",
                 "display": "standalone",
