--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 <body>
     <div class="container">
         <div id="welcomeScreen" class="welcome-screen">
-            <h1>🏋️‍♂️ August Träning</h1>
+            <h1>🏋️‍♂️ Fysbingo</h1>
             <input type="text" id="nameInput" class="name-input" placeholder="Skriv ditt namn..." maxlength="20">
             <button onclick="startApp()" class="start-btn">Börja träna!</button>
         </div>
